force-app/main/default/objects/sugati__Supplier_Invoice__c/sugati__Supplier_Invoice__c.object-meta.xml
<CustomObject>
    <label>Supplier Invoice</label>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>Invoice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>