force-app/main/default/objects/sugati__Supplier_Invoice__c/fields/sugati__SI_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SI_Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>