force-app/main/default/objects/sugati__Supplier_Invoice__c/fields/sugati__SI_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SI_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>