force-app/main/default/objects/sugati__Supplier_Invoice__c/fields/sugati__SI_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__SI_Invoice_No__c</fullName>
    <label>Invoice No</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>