force-app/main/default/objects/sugati__Supplier_Invoice__c/fields/sugati__SI_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__SI_Notes__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>