force-app/main/default/objects/sugati__Supplier_Invoice__c/fields/sugati__SI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__SI_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Supplier Invoices</relationshipLabel>
    <relationshipName>Supplier_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>