force-app/main/default/objects/sugati__Supplier_Invoice__c/fields/sugati__SI_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>sugati__SI_Outstanding__c</fullName>
    <formula>sugati__SI_Invoice_Amount__c -  sugati__SI_Total_Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>