force-app/main/default/objects/sugati__Supplier_Invoice__c/fields/sugati__SI_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SI_Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Supplier Invoices</relationshipLabel>
    <relationshipName>Supplier_Invoices</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>