force-app/main/default/objects/sugati__Supplier_Invoice__c/fields/sugati__SI_Supplier_Cost_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__SI_Supplier_Cost_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Cost &amp; Payment</label>
    <referenceTo>sugati__Supplier_Cost_Payment__c</referenceTo>
    <relationshipLabel>Supplier Invoices</relationshipLabel>
    <relationshipName>Supplier_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>